ci: release docker push

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,23 +1,34 @@
-name: Release
+name: Build Image
 
 on:
   release:
-    types: [published]
+  pull_request:
+    branches:
+      - 'master'
 jobs:
   release:
     runs-on: ubuntu-latest
-    environment: release
-    if: github.ref == 'refs/heads/master'
-
     steps:
-      - uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Docker meta
+        id: meta
+        uses: crazy-max/ghaction-docker-meta@v2
         with:
-          fetch-depth: 0
-      - name: Push to GitHub Packages
-        uses: docker/build-push-action@v1
+          images: obspm/kanon_api
+      - name: Login to GitHub Container Registry
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v1
         with:
-          username: ${{ github.actor }}
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
-          registry: docker.pkg.github.com
-          repository: legau/kanon-api/app
-          tag_with_ref: true
+      - name: Push to GitHub Packages
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
