--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,16 +8,6 @@ on:
 
 jobs:
   lint:
-    strategy:
-      fail-fast: false
-      matrix:
-        linter:
-          - name: Flake8
-            run: flake8
-          - name: Black
-            run: black --check .
-          - name: isort
-            run: isort -c -v .
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -25,11 +15,10 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
-      - uses: abatilo/actions-poetry@v2.1.0
-      - name: Install Dependencies
-        run: poetry install
-      - name: ${{ matrix.linter.name }}
-        run: poetry run ${{ matrix.linter.run }}
+      - name: Lint
+        run: |
+          pip install pre-commit
+          pre-commit run --all-files
 
   test:
     strategy:
@@ -47,7 +36,14 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - uses: abatilo/actions-poetry@v2.1.1
-      - name: Install Dependencies
+      - name: Config Poetry
+        run: poetry config virtualenvs.in-project true
+      - name: Set up cache
+        uses: actions/cache@v2
+        with:
+          path: .venv
+          key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
+      - name: Install dependencies
         run: poetry install
       - name: Test with Pytest
         run: poetry run pytest --cov=./ --cov-report=xml
@@ -55,3 +51,4 @@ jobs:
         uses: codecov/codecov-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: true
