--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,8 @@
-name: Build Image
+name: Release
 
 on:
   release:
-  pull_request:
-    branches:
-      - 'master'
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,7 +16,6 @@ jobs:
         with:
           images: obspm/kanon_api
       - name: Login to GitHub Container Registry
-        if: github.event_name != 'pull_request'
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
@@ -29,10 +26,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
       - name: Image digest
-        run: |
-          echo ${{ steps.docker_build.outputs.digest }}
-          docker image ls
+        run: echo ${{ steps.docker_build.outputs.digest }}
