--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
 
   build:
     needs: [lint, test]
-    if: ${{github.event_name != 'pull_request' || github.event_name == 'pull_request' && github.event.action == 'ready_for_review'}}
+    if: ${{github.event_name != 'pull_request' || github.event.pull_request.draft == false}}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
