--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Install dependencies
         run: poetry install
       - name: Test with Pytest
-        run: poetry run pytest --cov=./ --cov-report=xml
+        run: poetry run pytest --cov=kanon_api --cov-report=xml
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
