--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,16 +8,6 @@ on:
 
 jobs:
   lint:
-    strategy:
-      fail-fast: false
-      matrix:
-        linter:
-          - name: Flake8
-            run: flake8
-          - name: Black
-            run: black --check .
-          - name: isort
-            run: isort -c -v .
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -25,11 +15,10 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
-      - uses: abatilo/actions-poetry@v2.1.0
-      - name: Install Dependencies
-        run: poetry install
-      - name: ${{ matrix.linter.name }}
-        run: poetry run ${{ matrix.linter.run }}
+      - name: Lint
+        run: |
+          pip install pre-commit
+          pre-commit run --all-files
 
   test:
     strategy:
@@ -47,11 +36,43 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - uses: abatilo/actions-poetry@v2.1.1
-      - name: Install Dependencies
+      - name: Config Poetry
+        run: poetry config virtualenvs.in-project true
+      - name: Set up cache
+        uses: actions/cache@v2
+        with:
+          path: .venv
+          key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
+      - name: Install dependencies
         run: poetry install
       - name: Test with Pytest
-        run: poetry run pytest --cov=./ --cov-report=xml
+        run: poetry run pytest --cov=kanon_api --cov-report=xml
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: true
+
+  build:
+    needs: [lint, test]
+    if: ${{github.event_name != 'pull_request' || github.event.pull_request.draft == false}}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Build
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          load: true
+          tags: kanonapi:latest
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
+      - name: Run image
+        run: docker run -d -p 8000:8000 kanonapi:latest
+      - name: Test curl
+        run: |
+          sleep 5s
+          curl --fail "localhost:8000/radices/float_sexa/?value=5"
