--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,22 +2,31 @@ name: Release
 
 on:
   release:
-    types: [published]
-jobs:
-  release:
-    runs-on: ubuntu-latest
-    environment: release
-    if: github.ref == 'refs/heads/master'
 
+jobs:
+  build:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Docker meta
+        id: meta
+        uses: crazy-max/ghaction-docker-meta@v2
         with:
-          fetch-depth: 0
-      - name: Push to GitHub Packages
-        uses: docker/build-push-action@v1
+          images: obspm/kanon_api
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
         with:
-          username: ${{ github.actor }}
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
-          registry: docker.pkg.github.com
-          repository: legau/kanon-api/app
-          tag_with_ref: true
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
