--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
+          file: docker/Dockerfile
           context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
