--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,16 +13,16 @@ documentation = "https://kanon-api.readthedocs.io"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-kanonpy = "^0.2.0"
+kanonpy = "0.3.0"
 fastapi = "^0.63.0"
 
 [tool.poetry.dev-dependencies]
-black = "^20.8b1"
+black = "^21.6b0"
 flake8 = "^3.8.4"
 isort = "^5.8.0"
 pytest = "^6.2.3"
 pytest-cov = "^2.10.1"
-mypy = "^0.812"
+mypy = "^0.910"
 pre-commit = "^2.12.1"
 
 [build-system]
