--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -13,7 +13,7 @@ RUN pip install --upgrade pip && \
 RUN poetry install --no-dev --no-root
 RUN pip install uvicorn
 
-RUN poetry run python -m kanon_api.app
+RUN python -m kanon_api.app
 
 COPY . ./
 ENV HOST 0.0.0.0
