feat: cache dishas tables (#44)

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -13,8 +13,11 @@ RUN pip install --upgrade pip && \
 RUN poetry install --no-dev --no-root
 RUN pip install uvicorn
 
+
 COPY . ./
 ENV HOST 0.0.0.0
 ENV PORT 8000
+
+RUN python -m kanon_api.app
 
 ENTRYPOINT ["./docker/entrypoint.sh"]
