--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,8 +21,8 @@ repos:
     hooks:
       - id: flake8
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.812
+    rev: v0.910
     hooks:
       - id: mypy
         args: []
-        additional_dependencies: [kanonpy, fastapi, starlette, pytest]
+        additional_dependencies: [kanonpy, fastapi, starlette, pytest, types-requests]
