--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,4 +25,4 @@ repos:
     hooks:
       - id: mypy
         args: []
-        additional_dependencies: [kanon, fastapi, starlette, pytest, types-requests]
+        additional_dependencies: [kanon, fastapi, starlette, pytest, types-requests, scipy]
