--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ pytest-cov = "^2.10.1"
 mypy = "^0.910"
 pre-commit = "^2.12.1"
 types-requests = "^2.25.0"
+uvicorn = "^0.16.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
