--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
-          python-version: 3.10
+          python-version: "3.10"
       - name: Lint
         run: |
           pip install pre-commit
@@ -25,7 +25,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version:
-          - 3.10
+          - "3.10"
         os:
           - ubuntu-latest
     runs-on: ${{ matrix.os }}
