--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "kanon-api"
-version = "0.0.1"
+version = "0.6.0"
 description = "Kanon features exposed through an API"
 authors = ["Léni Gauffier <leni.gauffier@obspm.fr>"]
 readme = "README.md"
@@ -12,20 +12,20 @@ documentation = "https://kanon-api.readthedocs.io"
 "Changelog" = "https://kanon-api.readthedocs.io/changelog.html"
 
 [tool.poetry.dependencies]
-python = "^3.9"
-kanon = "0.6.0"
-fastapi = "^0.75.0"
+python = "^3.10"
+kanon = "^0.6.0"
+fastapi = "<1.0"
 
 [tool.poetry.dev-dependencies]
-black = "^22.1"
-flake8 = "^4.0.1"
-isort = "^5.8.0"
-pytest = "^7.0.1"
-pytest-cov = "^3.0.0"
-mypy = "^0.931"
-pre-commit = "^2.17.0"
-types-requests = "^2.25.0"
-uvicorn = "^0.17.5"
+black = "*"
+flake8 = "^*"
+isort = "*"
+pytest = "*"
+pytest-cov = "*"
+mypy = "*"
+pre-commit = "*"
+types-requests = "*"
+uvicorn = "*"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
